--- a/.github/actions/npm/steps/publish-package/action.yml
+++ b/.github/actions/npm/steps/publish-package/action.yml
@@ -98,8 +98,14 @@ runs:
       working-directory: package-contents
       env:
         NODE_AUTH_TOKEN: ${{ inputs.auth-token }}
+        PACKAGE_NAME: ${{ inputs.package-name }}
+        PACKAGE_VERSION: ${{ inputs.version }}
+        REGISTRY_NAME: ${{ inputs.registry-name }}
+        REGISTRY_URL: ${{ inputs.registry-url }}
+        PUBLISH_COMMAND: ${{ inputs.publish-command }}
+        DRY_RUN: ${{ inputs.dry-run }}
       run: |
-        echo "🚀 Publishing ${{ inputs.package-name }}@${{ inputs.version }} to ${{ inputs.registry-name }}"
+        echo "🚀 Publishing ${PACKAGE_NAME}@${PACKAGE_VERSION} to ${REGISTRY_NAME}"
         echo "📂 Publishing from package-contents directory"
 
         # Show what files are available for publishing
@@ -117,7 +123,7 @@ runs:
         fi
 
         # Set the publish command
-        PUBLISH_CMD="${{ inputs.publish-command }}"
+        PUBLISH_CMD="$PUBLISH_COMMAND"
 
         if [ -z "$PUBLISH_CMD" ]; then
           echo "❌ No publish command provided"
@@ -129,10 +135,10 @@ runs:
         fi
 
         # Check if this is a dry run
-        if [ "${{ inputs.dry-run }}" = "true" ]; then
+        if [ "$DRY_RUN" = "true" ]; then
           echo "🧪 DRY RUN MODE: Validating publish setup without executing"
           echo "📝 Would execute command: $PUBLISH_CMD"
-          echo "🌐 Target registry: ${{ inputs.registry-url }}"
+          echo "🌐 Target registry: $REGISTRY_URL"
           echo ""
           echo "✅ Validation completed successfully:"
           echo "  - Package directory structure is valid"
@@ -141,7 +147,7 @@ runs:
           echo "  - Publish command is properly formatted"
           echo "  - Authentication token is available"
           echo ""
-          echo "💡 In real run, would execute: $PUBLISH_CMD (targeting ${{ inputs.registry-url }})"
+          echo "💡 In real run, would execute: $PUBLISH_CMD (targeting $REGISTRY_URL)"
           echo "published=true" >> $GITHUB_OUTPUT
           echo "error-type=" >> $GITHUB_OUTPUT
           echo "error-message=" >> $GITHUB_OUTPUT
@@ -152,7 +158,7 @@ runs:
           echo "🔧 Running command: $PUBLISH_CMD"
 
           if OUTPUT=$(eval "$PUBLISH_CMD" 2>&1); then
-          echo "✅ Successfully published to ${{ inputs.registry-name }}"
+          echo "✅ Successfully published to $REGISTRY_NAME"
           echo "$OUTPUT"
           echo "published=true" >> $GITHUB_OUTPUT
           echo "error-type=" >> $GITHUB_OUTPUT
@@ -168,23 +174,23 @@ runs:
           if echo "$OUTPUT" | grep -q "Cannot publish over previously published version"; then
             # This is the key case - version was previously published but may not be visible
             echo ""
-            echo "📊 Version conflict detected: ${{ inputs.version }} was previously published"
+            echo "📊 Version conflict detected: $PACKAGE_VERSION was previously published"
             
             # Check if version is currently available in registry
-            if npm view "${{ inputs.package-name }}@${{ inputs.version }}" version 2>/dev/null; then
-              echo "✅ Version ${{ inputs.version }} is available in registry"
+            if npm view "${PACKAGE_NAME}@${PACKAGE_VERSION}" version 2>/dev/null; then
+              echo "✅ Version $PACKAGE_VERSION is available in registry"
               echo "ℹ️ This is a pseudo-success - version exists and is accessible"
               echo "published=true" >> $GITHUB_OUTPUT
               echo "error-type=version-already-published" >> $GITHUB_OUTPUT
-              echo "error-message=Version ${{ inputs.version }} already exists in registry" >> $GITHUB_OUTPUT
+              echo "error-message=Version $PACKAGE_VERSION already exists in registry" >> $GITHUB_OUTPUT
               echo "suggested-fix=This is normal - the version is already published and available" >> $GITHUB_OUTPUT
               echo "is-registry-available=true" >> $GITHUB_OUTPUT
             else
-              echo "❌ Version ${{ inputs.version }} is NOT available in registry"
+              echo "❌ Version $PACKAGE_VERSION is NOT available in registry"
               echo "⚠️ This version was previously published but is now reserved/hidden"
               echo "published=false" >> $GITHUB_OUTPUT
               echo "error-type=version-conflict" >> $GITHUB_OUTPUT
-              echo "error-message=Version ${{ inputs.version }} is reserved by NPM (previously published then unpublished)" >> $GITHUB_OUTPUT
+              echo "error-message=Version $PACKAGE_VERSION is reserved by NPM (previously published then unpublished)" >> $GITHUB_OUTPUT
               echo "suggested-fix=Update package.json version, git tags, and GitHub releases to a new version number" >> $GITHUB_OUTPUT
               echo "is-registry-available=false" >> $GITHUB_OUTPUT
               exit 1
